--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -6,6 +6,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+            - name: set scripts permissions
+              run: chmod 777 ./bin/*.sh
             - name: build docker
               run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
             
