--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -2,12 +2,12 @@ name: sparkle api gateway pipeline
 
 on: [push]
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: set scripts permissions
-              run: chmod 777 ./bin/*.sh
-            - name: build docker
-              run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build docker container
+        run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
+      - name: Run integration tests
+        run: ./bin/run_integration_tests.sh
             
