--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -8,6 +8,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build docker container
         run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
+      - name: Update dependencies
+        run: ./bin/deps.sh
+      - name: Set up virtual env
+        run: ./bin/venv.sh
       - name: Run integration tests
         run: ./bin/run_integration_tests.sh
             
