--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -16,4 +16,6 @@ jobs:
         run: ./bin/venv.sh
       - name: Run integration tests
         run: ./bin/run_integration_tests.sh
+        env:
+          SPARKLE_TEST_ENV: 1
             
