--- a/cfg/config.json
+++ b/cfg/config.json
@@ -4,7 +4,7 @@
         "port": 7775
     },
     "db": {
-        "host": "sparkledb",
+        "host": "127.0.0.1",
         "port": 5432,
         "name": "sparkledb",
         "user": "sparkle"
