--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -12,6 +12,8 @@ jobs:
         run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
       - name: Create docker network
         run: docker network create sparkle-net
+      - name: set scripts permissions
+        run: chmod 777 ./bin/*.sh
       - name: Update dependencies
         run: ./bin/deps.sh
       - name: Set up virtual env
