Set constant libraries versions

--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -1,7 +1,7 @@
-aiomisc>=9.6.8
-sanic>=18.9.0
+aiomisc==9.6.8
+sanic==19.9.0
 sanic-jwt==1.1.4
-uvloop>=0.14.0
+uvloop==0.14.0
 asyncpg==0.21.0
 httpx==0.16.1
 bcrypt==3.2.0
