Migrated db to another repo

--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -14,6 +14,10 @@ jobs:
         run: ./bin/deps.sh
       - name: Set up virtual env
         run: ./bin/venv.sh
+      - name: Fetch sparkle-db scheme:
+        run: |
+            git clone --single-branch --branch https://github.com/sparkle-sh/sparkle-db
+            ln -s /sparkle-db/misc test_misc
       - name: Run unit tests
         run: ./bin/run_unit_tests.sh
       - name: Build docker container
