--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile .
       - name: Create docker network
         run: docker network create sparkle-net
-      - name: Fetch sparkle-db scheme:
+      - name: Fetch sparkle-db scheme
         run: |
             git clone --single-branch --branch https://github.com/sparkle-sh/sparkle-db .
             ln -s /sparkle-db/misc test_misc
