--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -22,8 +22,8 @@ jobs:
         run: docker network create sparkle-net
       - name: Fetch sparkle-db scheme
         run: |
-            git clone --single-branch --branch https://github.com/sparkle-sh/sparkle-db 
-          ln -s /sparkle-db/misc test_misc
+            git clone --single-branch --branch dev https://github.com/sparkle-sh/sparkle-db 
+            ln -s /sparkle-db/misc test_misc
       - name: Run integration tests
         run: ./bin/run_integration_tests.sh
         env:
