Migrate db schema to 3rd party repo

--- a/.github/workflows/sparkle-api-gw-pipe.yml
+++ b/.github/workflows/sparkle-api-gw-pipe.yml
@@ -17,9 +17,13 @@ jobs:
       - name: Run unit tests
         run: ./bin/run_unit_tests.sh
       - name: Build docker container
-        run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile . 
+        run: docker build -t sparkle-api-gateway --file ./misc/Dockerfile .
       - name: Create docker network
         run: docker network create sparkle-net
+      - name: Fetch sparkle-db scheme
+        run: |
+          git clone --single-branch --branch dev https://github.com/sparkle-sh/sparkle-db 
+          cp sparkle-db/misc/*.sql ./misc
       - name: Run integration tests
         run: ./bin/run_integration_tests.sh
         env:
@@ -30,5 +34,3 @@ jobs:
           docker login --username ${{ secrets.DOCKER_AUTH_LOGIN }} --password ${{ secrets.DOCKER_AUTH_TOKEN}}
           docker tag sparkle-api-gateway ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-api-gateway
           docker push ${{ secrets.DOCKER_AUTH_LOGIN }}/sparkle-api-gateway
-      
-            
